--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!-- <app-face-snap [faceSnap]="mySnap"></app-face-snap> -->
-<app-json-table></app-json-table>
+
+<app-header></app-header>
+<router-outlet></router-outlet>
