--- a/src/app/json-table/json-table.component.html
+++ b/src/app/json-table/json-table.component.html
@@ -1,51 +1,17 @@
-<div class="container">
-  <h2>Table 1: Projects</h2>
+<div class="container" *ngFor="let table of tables">
+  <h2>{{ table.title }}</h2>
   <div class="table-container">
     <table class="data-table">
       <thead>
         <tr>
-          <th *ngFor="let header of headers">{{ header }}</th>
+          <th *ngFor="let header of table.headers">{{ header }}</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let row of transformedData">
-          <td *ngFor="let header of headers">{{ row[header] }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <h2>Table 2: Programs</h2>
-  <div class="table-container">
-    <table class="data-table">
-      <thead>
-        <tr>
-          <th *ngFor="let header of headers2">{{ header }}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of transformedData2">
-          <td *ngFor="let header of headers2">{{ row[header] }}</td>
+        <tr *ngFor="let row of table.data">
+          <td *ngFor="let header of table.headers">{{ row[header] }}</td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
-
-<h2>Table 3: Programs</h2>
-<div class="table-container">
-  <table class="data-table">
-    <thead>
-      <tr>
-        <th *ngFor="let header of headers3">{{ header }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let row of transformedData3">
-        <td *ngFor="let header of headers3">{{ row[header] }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-
