--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -67,6 +67,7 @@ body {
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
   transition: transform 0.3s ease;
 }
 
@@ -76,6 +77,7 @@ body {
 
 .feature-icon {
   font-size: 2.5rem;
+  color: #6d6d71;
   margin-bottom: 1.5rem;
 }
 
