container-issue-done

--- a/src/app/json-table/json-table.component.html
+++ b/src/app/json-table/json-table.component.html
@@ -86,7 +86,7 @@
     </div>
   </div>
 
-  <div class="container side-by-side" *ngIf="tables.length > 2">
+  <div class="container side-by-side table-2-container" *ngIf="tables.length > 2">
     <a href="#" class="details-button">Détails</a>
     <h2>{{ tables[2].title }}</h2>
     <div class="table-container">
